--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^6.2.0",
     "chromedriver": "^141.0.0",
     "mocha": "^11.7.4",
     "selenium-webdriver": "^4.36.0"
